--- a/index.html
+++ b/index.html
@@ -41,8 +41,24 @@
     </form>
 
     <div id="result" class="result"></div>
-    
 
+
+    <h2>Cálculo de Parqueo</h2>
+    <form id="parking-form">
+      <label for="entry">Hora de entrada:</label>
+      <input type="datetime-local" id="entry" required />
+
+      <label for="exit">Hora de salida:</label>
+      <input type="datetime-local" id="exit" required />
+
+      <label>
+        <input type="checkbox" id="lost-ticket" /> Ticket perdido
+      </label>
+
+      <input type="submit" value="Calcular Tarifa" />
+    </form>
+    <div id="parking-result"></div>
+    
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
