feat: formulario y sección de interfaz para cálculo de tarifas de parqueo

--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
     <div id="result" class="result"></div>
 
 
-    <h2>Cálculo de Parqueo</h2>
+    <h2>Cálculo de Parqueo proyecto</h2>
     <form id="parking-form">
-      <label for="entry">Hora de entrada:</label>
+      <label for="entry">Hora de entrada del vehiculo:</label>
       <input type="datetime-local" id="entry" required />
 
-      <label for="exit">Hora de salida:</label>
+      <label for="exit">Hora de salida del vehiculo:</label>
       <input type="datetime-local" id="exit" required />
 
       <label>
-        <input type="checkbox" id="lost-ticket" /> Ticket perdido
+        <input type="checkbox" id="lost-ticket" /> Ticket perdidoo
       </label>
 
       <input type="submit" value="Calcular Tarifa" />
     </form>
     <div id="parking-result"></div>
-    
+
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
