--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="result" class="result"></div>
 
 
-    <h2>Cálculo de Parqueo proyecto</h2>
+    <h2>Cálculo de Parqueo proyectoa</h2>
     <form id="parking-form">
       <label for="entry">Hora de entrada del vehiculo:</label>
       <input type="datetime-local" id="entry" required />
