feat: agregar estructura base del HTML

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
     <h2>Cálculo de Parqueo</h2>
     <form id="parking-form">
-      <label for="entry">Hora de entrada:</label>
+      <label for="entry">Hora de entrada.:</label>
       <input type="datetime-local" id="entry" required />
 
-      <label for="exit">Hora de salida:</label>
+      <label for="exit">Hora de salida.:</label>
       <input type="datetime-local" id="exit" required />
 
       <label>
